Fixed issue with deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dmjohnspor.github.io/pokedex_app",
+  "homepage": "https://dmjohnspor.github.io/pokedex_app",
   "name": "pokedex_app",
   "version": "0.1.0",
   "private": true,
